# smart-cli-tasker

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
data/: tasks.json
src/: main.rs
src/commands/: add.rs  complete.rs  delete.rs  list.rs  mod.rs
src/models/: task.rs
src/storage/: file.rs  mod.rs
