[package]
name = "smart_tasker"
version = "0.1.0"
edition = "2024"
authors = ["Adarsh"]
description = "A task tracking CLI tool written in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Webrowse/smart-cli-tasker"
keywords = ["cli", "task", "rust", "clap", "serde"]
categories = ["command-line-utilities"]
homepage = "https://crates.io/crates/smart_tasker"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


